--- a/Views/marcas_tiempo/Create.cshtml
+++ b/Views/marcas_tiempo/Create.cshtml
@@ -1,82 +1,77 @@
 ﻿@model DataBase_RH_BanderaBlanca.Models.marcas_tiempo
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Escanear Código QR";
 }
 
-<h2>Create</h2>
 
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>marcas_tiempo</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Fecha_Marca, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Fecha_Marca, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Fecha_Marca, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.idEmpleado, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.idEmpleado, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.idEmpleado, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.idCatalogo_Movimientos, "idCatalogo_Movimientos", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("idCatalogo_Movimientos", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.idCatalogo_Movimientos, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Marca_Hora, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Marca_Hora, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Marca_Hora, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Tardia, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Tardia)
-                    @Html.ValidationMessageFor(model => model.Tardia, "", new { @class = "text-danger" })
+<div class="container mt-5">
+    <h2 class="text-center">Escanear Código QR</h2>
+    <div class="row justify-content-center mt-4">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-body">
+                    <video id="video" class="w-100" autoplay></video>
+                    <div id="scanResult" class="mt-3 text-center"></div>
                 </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Justificada, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Justificada, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Justificada, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    <script src="https://unpkg.com/&commat;zxing/library@latest"></script>
+
+    <script>
+        const video = document.getElementById('video');
+        const scanResult = document.getElementById('scanResult');
+        const codeReader = new ZXing.BrowserQRCodeReader();
+
+        // Obtener acceso a la cámara
+        navigator.mediaDevices.getUserMedia({ video: true })
+            .then(stream => {
+                video.srcObject = stream;
+                video.play();
+                startScanning();
+            })
+            .catch(err => {
+                console.error("Error al acceder a la cámara: ", err);
+                swal("Error", "No se pudo acceder a la cámara.", "error");
+            });
+
+        // Función para iniciar el escaneo
+        function startScanning() {
+            codeReader.decodeFromVideoDevice(undefined, video, (result, err) => {
+                if (result) {
+                    $.ajax({
+                        type: 'POST',
+                        url: '@Url.Action("ValidarMarca", "marcas_tiempo")',
+                        data: { identificador: result.text },
+                        success: function (response) {
+                            if (response.success) {
+                                Swal.fire({
+                                    title: "Marca Registrada",
+                                    text: "Se ha marcado asistencia",
+                                    icon: "success"
+                                });
+                            } else {
+                                Swal.fire({
+                                    title: "Marca Denegada",
+                                    text: "No se ha marcado asistencia",
+                                    icon: "error"
+                                });
+                            }
+                        },
+                        error: function (error) {
+                            Swal.fire({
+                                title: "Marca Denegada",
+                                text: "No se ha marcado asistencia",
+                                icon: "error"
+                            });
+                        }
+                    });
+                }
+            });
+        }
+    </script>
 }
