--- a/Views/marcas_tiempo/Create.cshtml
+++ b/Views/marcas_tiempo/Create.cshtml
@@ -2,86 +2,125 @@
 
 @{
     ViewBag.Title = "Escanear Código QR";
+    Layout = null;
 }
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Responsive Admin &amp; Dashboard Template based on Bootstrap 5">
+    <meta name="author" content="AdminKit">
+    <meta name="keywords" content="adminkit, bootstrap, bootstrap 5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="shortcut icon" href="~/Assets/img/icons/icon-48x48.png" />
+
+    <link rel="canonical" href="https://demo-basic.adminkit.io/" />
 
 
-<div class="container mt-5">
-    <h2 class="text-center">Escanear Código QR</h2>
-    <div class="row justify-content-center mt-4">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
-                    <video id="video" class="w-100" autoplay></video>
-                    <div id="scanResult" class="mt-3 text-center"></div>
+    <link href="~/Assets/css/app.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - Fundacion Bandera Blanca</title>
+    @Scripts.Render("~/bundles/modernizr")
+
+</head>
+
+
+<body>
+
+
+
+    <div class="container mt-5">
+        <h2 class="text-center">Escanear Código QR</h2>
+        <div class="row justify-content-center mt-4">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                        <video id="video" class="w-100" autoplay></video>
+                        <div id="scanResult" class="mt-3 text-center"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-@section Scripts {
     <script src="https://unpkg.com/&commat;zxing/library@latest"></script>
 
     <script>
-        const video = document.getElementById('video');
-        const scanResult = document.getElementById('scanResult');
-        const codeReader = new ZXing.BrowserQRCodeReader();
+const video = document.getElementById('video');
+const scanResult = document.getElementById('scanResult');
+const codeReader = new ZXing.BrowserQRCodeReader();
 
-        let bloqueado = false; // Variable para evitar múltiples envíos
-        let tiempoBloqueo = 5000; // Tiempo de bloqueo en milisegundos (5 segundos)
+let bloqueado = false; // Variable para evitar múltiples envíos
+let tiempoBloqueo = 5000; // Tiempo de bloqueo en milisegundos (5 segundos)
 
-        // Obtener acceso a la cámara
-        navigator.mediaDevices.getUserMedia({ video: true })
-            .then(stream => {
-                video.srcObject = stream;
-                video.play();
-                startScanning();
-            })
-            .catch(err => {
-                console.error("Error al acceder a la cámara: ", err);
-                swal("Error", "No se pudo acceder a la cámara.", "error");
-            });
+// Obtener acceso a la cámara
+navigator.mediaDevices.getUserMedia({ video: true })
+    .then(stream => {
+        video.srcObject = stream;
+        video.play();
+        startScanning();
+    })
+    .catch(err => {
+        console.error("Error al acceder a la cámara: ", err);
+        swal("Error", "No se pudo acceder a la cámara.", "error");
+    });
 
-        // Función para iniciar el escaneo
-        function startScanning() {
-            codeReader.decodeFromVideoDevice(undefined, video, (result, err) => {
-                if (result && !bloqueado) {
-                    bloqueado = true;  // Bloqueamos el escaneo
-                    $.ajax({
-                        type: 'POST',
-                        url: '@Url.Action("ValidarMarca", "marcas_tiempo")',
-                        data: { identificador: result.text },
-                        success: function (response) {
-                            if (response.success) {
-                                Swal.fire({
-                                    title: "Marca Registrada",
-                                    text: "Se ha marcado asistencia",
-                                    icon: "success"
-                                });
-                            } else {
-                                Swal.fire({
-                                    title: "Marca Denegada",
-                                    text: response.message,
-                                    icon: "error"
-                                });
-                            }
-                        },
-                        error: function (error) {
-                            Swal.fire({
-                                title: "Error",
-                                text: "Ocurrió un error al intentar registrar la marca.",
-                                icon: "error"
-                            });
-                        },
-                        complete: function() {
-                            // Desbloquear el escaneo después de cierto tiempo
-                            setTimeout(function() {
-                                bloqueado = false;
-                            }, tiempoBloqueo);
-                        }
+// Función para iniciar el escaneo
+function startScanning() {
+    codeReader.decodeFromVideoDevice(undefined, video, (result, err) => {
+        if (result && !bloqueado) {
+            bloqueado = true;  // Bloqueamos el escaneo
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("ValidarMarca", "marcas_tiempo")',
+                data: { identificador: result.text },
+                success: function (response) {
+                    if (response.success) {
+                        Swal.fire({
+                            title: "Marca Registrada",
+                            text: "Se ha marcado asistencia",
+                            icon: "success"
+                        });
+                    } else {
+                        Swal.fire({
+                            title: "Marca Denegada",
+                            text: response.message,
+                            icon: "error"
+                        });
+                    }
+                },
+                error: function (error) {
+                    Swal.fire({
+                        title: "Error",
+                        text: "Ocurrió un error al intentar registrar la marca.",
+                        icon: "error"
                     });
+                },
+                complete: function() {
+                    // Desbloquear el escaneo después de cierto tiempo
+                    setTimeout(function() {
+                        bloqueado = false;
+                    }, tiempoBloqueo);
                 }
             });
         }
-    </script>
+    });
 }
+    </script>
+
+
+    @Scripts.Render("~/bundles/jquery")
+
+</body>
+
+</html>
