--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,6 +20,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@5.3.6/dist/simplebar.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/simplebar@5.3.6/dist/simplebar.min.js"></script>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,6 +36,11 @@
     @{
         DataBase_RH_BanderaBlanca.Models.Persona user = new DataBase_RH_BanderaBlanca.Models.Persona();
         user = (DataBase_RH_BanderaBlanca.Models.Persona)Session["user"];
+
+        if (user == null)
+        {
+            Response.Redirect(Url.Action("Login", "Login"));
+        }
     }
 
     <div class="wrapper">
@@ -230,7 +237,7 @@
                         </ul>
                     </li>
                     <li class="sidebar-item active">
-                        <a class="sidebar-link" href="@Url.Action("Index", "Home")">
+                        <a class="sidebar-link" href="@Url.Action("Index", "Personas")">
                             <i class="align-middle" data-feather="sliders"></i>
                             <span class="align-middle">Agregar Usuario</span>
                         </a>
