--- a/Views/vacaciones/Gestion.cshtml
+++ b/Views/vacaciones/Gestion.cshtml
@@ -1,49 +1,67 @@
 ﻿@model IEnumerable<DataBase_RH_BanderaBlanca.Models.vacaciones>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Gestionar";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-12 col-lg-12 col-xxl-12 d-flex">
+        <div class="card flex-fill">
+            <div class="card-header">
+                <h5 class="card-title mb-0">Solicitudes de Vacaciones</h5>
+            </div>
 
-<h2>Vacaciones disponibles: @ViewBag.diasDisponibles</h2>
-<h2>Vacaciones disfrutadas: @ViewBag.diasDescontados</h2>
+            <!-- Contenedor para Vacaciones Disponibles y Disfrutadas -->
+            <div class="container mt-4 pb-5">
+                <div class="row text-center mb-4">
+                    <div class="col-md-6">
+                        <div class="card shadow-sm">
+                            <div class="card-body">
+                                <h5 class="card-title text-muted">Vacaciones Disponibles</h5>
+                                <h1 class="display-4 text-success">@ViewBag.diasDisponibles</h1>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card shadow-sm">
+                            <div class="card-body">
+                                <h5 class="card-title text-muted">Vacaciones Disfrutadas</h5>
+                                <h1 class="display-4 text-primary">@ViewBag.diasDescontados</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Cantidad_Dias)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fecha_Solicitud)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.observacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)
-        </th>
-    </tr>
+                <!-- Sección de tabla de solicitudes -->
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h2 class="mb-0">Vacaciones</h2>
+                    <a href="@Url.Action("Create")" class="btn btn-success">Crear Nueva Solicitud</a>
+                </div>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cantidad_Dias)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fecha_Solicitud)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.observacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)
-            </td>
-        </tr>
-    }
-
-</table>
+                <div class="table-responsive">
+                    <table class="table my-0 table-hover">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>@Html.DisplayNameFor(model => model.Cantidad_Dias)</th>
+                                <th>@Html.DisplayNameFor(model => model.Fecha_Solicitud)</th>
+                                <th>@Html.DisplayNameFor(model => model.observacion)</th>
+                                <th>@Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@Html.DisplayFor(modelItem => item.Cantidad_Dias)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Fecha_Solicitud)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.observacion)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
