--- a/Views/vacaciones/Index.cshtml
+++ b/Views/vacaciones/Index.cshtml
@@ -4,46 +4,49 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-12 col-lg-12 col-xxl-12 d-flex">
+        <div class="card flex-fill">
+            <div class="card-header">
+                <h5 class="card-title mb-0">Solicitudes de Vacaciones</h5>
+            </div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Cantidad_Dias)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fecha_Solicitud)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.observacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)
-        </th>
-        <th></th>
-    </tr>
+            <!-- Ajustamos el contenedor para que no quede pegado al borde inferior -->
+            <div class="container mt-5 pb-5">
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h2 class="mb-0">Vacaciones</h2>
+                    <a href="@Url.Action("Create")" class="btn btn-success">Crear Nueva Solicitud</a>
+                </div>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cantidad_Dias)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fecha_Solicitud)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.observacion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { date = item.Fecha_Inicio, idEmpleado = item.idEmpleado }, new { @class = "btn btn-primary btn-sm" })
-        </td>
-    </tr>
-}
+                <div class="table-responsive">
+                    <table class="table my-0 table-hover">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>@Html.DisplayNameFor(model => model.Cantidad_Dias)</th>
+                                <th>@Html.DisplayNameFor(model => model.Fecha_Solicitud)</th>
+                                <th>@Html.DisplayNameFor(model => model.observacion)</th>
+                                <th>@Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@Html.DisplayFor(modelItem => item.Cantidad_Dias)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Fecha_Solicitud)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.observacion)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)</td>
+                                    <td class="text-right">
+                                        @Html.ActionLink("Editar", "Edit", new { date = item.Fecha_Inicio, idEmpleado = item.idEmpleado }, new { @class = "btn btn-primary btn-sm" })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
 
-</table>
+        </div>
+    </div>
+</div>
